more updates/fixes for Oauth not working 100%
