# routes/events.js
@@ -1,6 +1,6 @@
 const express = require('express');
-const { requiresAuth } = require('express-openid-connect');
 const router = express.Router();
+const authorize = require('../controllers/authenticate');
 const eventsController = require('../controllers/events');
 
 //Get a list of all events
@@ -10,12 +10,13 @@ router.get('/',  eventsController.getEvents);
 router.get('/:id', eventsController.getEventById);
 
 //Create a new event
-router.post('/', requiresAuth(), eventsController.createEvent);
+router.post('/', authorize.authUserLogin, eventsController.createEvent);
 
 //Update an event
-router.put('/:id', requiresAuth(), eventsController.updateEvent);
+router.put('/:id', authorize.authUserLogin, eventsController.updateEvent);
 
 //Delete an event
-router.delete('/:id', requiresAuth(), eventsController.deleteEvent);
+router.delete('/:id', authorize.authUserLogin, eventsController.deleteEvent);
+
 
 module.exports = router;
